--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  /* outline: 2px solid red; */
+  outline: 2px solid red;
 }
 
 /* Цвет заголовка секции  #757575  */
@@ -108,18 +108,29 @@ img {
 .header-item:not(:last-child) {
   margin-right: 50px;
 }
+.tel-svg {
+  /* width: 10px; */
+  /* height: 16px; */
+  margin-right: 10px;
+  align-items: center;
+}
 .header-contact {
-  display: flex;
+  /* display: flex; */
   color: var(--primery-color-text);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  fill: #757575;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .header-contact-list {
+  display: flex;
   margin-left: auto;
+  align-items: center;
 }
-.contact-item:not(:last-child) {
+.contact-item:nth-child(1) {
   margin-right: 50px;
 }
 .header-nav .header-list .current {
@@ -134,19 +145,23 @@ img {
 .header-link:hover,
 .header-link:focus,
 .header-contact:hover,
-.header-contact:focus {
+.header-contact:focus,
+.tel-svg:hover {
   color: var(--color-hover);
+  fill: var(--color-hover);
 }
 
 /*------------------------ HERO---------------- */
 .hero {
-  background-color: #2f303a;
+  max-width: 1600px;
+  /* background-color: #2f303a; */
   padding-top: 200px;
   padding-bottom: 200px;
-}
-
-.hero {
   text-align: center;
+  margin: 0 auto;
+  /* background: rgba(47, 48, 58, 0.4); */
+  background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../imeges/Img.jpg);
 }
 
 .hero .hero-title {
@@ -213,6 +228,16 @@ img {
 .work-principles {
   padding-top: 94px;
 }
+.principles-icon-box {
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
+  text-align: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  margin-bottom: 30px;
+}
 .work-principles .list {
   display: flex;
   margin-right: -30px;
@@ -268,15 +293,67 @@ img {
   /* margin-bottom: 30px; */
 }
 .team .secondary-title {
-  /* text-align: center;
-  padding-left: 20px;
-  padding-right: 20px; */
   margin-bottom: 10px;
 }
 .team .section-text {
   /* text-align: center; */
   /* margin-bottom: 30px; */
 }
+
+.social-link-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-link {
+  display: block;
+  width: 44px;
+  height: 44px;
+  padding: 12px 12px;
+  color: var(--primery-color-text);
+}
+.svg-social {
+  fill: currentColor;
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--color-hover);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  cursor: pointer;
+  color: #ffffff;
+}
+
+.social-link-item + .social-link-item {
+  margin-left: 10px;
+}
+
+/* .social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: #2f303a;} */
+
+/*
+.social-link {
+  display: block;
+  width: 44px;
+  height: 44px;
+  padding: 12px 12px;
+  border-radius: 50%;
+}
+.svg-social {
+  fill: #afb1b8;
+}
+.social-link:hover,
+.social-link:focus,
+.svg-social:hover {
+  background-color: var(--color-hover);
+  fill: var(--color-prime);
+} */
 /* -------------------- FOOTER------------ */
 .footer {
   /* display: flex; */
