--- a/css/styles.css
+++ b/css/styles.css
@@ -229,12 +229,15 @@ img {
   padding-top: 94px;
 }
 .principles-icon-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 270px;
   height: 120px;
   background-color: #f5f4fa;
-  text-align: center;
+  /* text-align: center;
   padding-top: 25px;
-  padding-bottom: 25px;
+  padding-bottom: 25px; */
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   margin-bottom: 30px;
 }
@@ -279,40 +282,40 @@ img {
 
 .team-item {
   margin-right: 30px;
-  padding-bottom: 30px;
+  background-color: #fff;
+  /* padding-bottom: 30px; */
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 .team-text {
-  /* padding-top: 30px;
-  padding-bottom: 30px; */
   padding: 30px 20px 30px 20px;
   text-align: center;
-}
-.team-img {
-  /* margin-bottom: 30px; */
 }
 .team .secondary-title {
   margin-bottom: 10px;
 }
 .team .section-text {
+  margin-bottom: 16px;
   /* text-align: center; */
   /* margin-bottom: 30px; */
 }
-
 .social-list {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 270px;
+  margin-right: 30px;
+  /* width: 270px; */
+  /* margin-top: 16px; */
+  /* margin-bottom: 30px; */
 }
 
 .social-link {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 44px;
   height: 44px;
-  padding: 12px 12px;
   color: #afb1b8;
 }
 .svg-social {
@@ -329,6 +332,11 @@ img {
   color: #ffffff;
 }
 
+.social-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .social-item + .social-item {
   margin-left: 10px;
 }
