--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ img {
 .team .section-title {
   margin-bottom: 50px;
 }
-.team .list {
+.team-list {
   display: flex;
   margin-right: -30px;
 }
@@ -304,10 +304,6 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 30px;
-  /* width: 270px; */
-  /* margin-top: 16px; */
-  /* margin-bottom: 30px; */
 }
 
 .social-link {
@@ -390,7 +386,7 @@ img {
 }
 .clients-link:hover {
   color: var(--color-hover);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
   border: 1px solid #2196f3;
 }
 
@@ -472,7 +468,7 @@ img {
 /* ------------Portfolio--------- */
 
 /* ---------FILTER BUTTONS------------ */
-.gallary {
+.gallery {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -481,7 +477,7 @@ img {
   font-family: inherit;
   background-color: #f5f4fa;
   color: var(--title-color-text);
-  font-style: 500;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
   letter-spacing: 0.03em;
@@ -502,10 +498,8 @@ img {
 .btn:focus {
   background-color: var(--color-hover);
   color: #ffffff;
-  font-style: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  letter-spacing: 0.03em;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* -----------Галерея----------------- */
@@ -526,19 +520,22 @@ img {
   line-height: 1.86;
   letter-spacing: 0.03em;
 }
-.gallary-text {
+.gallery-text {
   padding: 20px 24px;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
 }
-.gallary-item {
+.gallery-item {
   margin-right: 30px;
   margin-bottom: 30px;
   background: #ffffff;
   flex-basis: calc((100% - 90px) / 3);
 }
-.gallary-item:hover {
+.gallery-link {
+  display: block;
+}
+.gallery-link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
