--- a/css/styles.css
+++ b/css/styles.css
@@ -238,7 +238,7 @@ img {
   /* text-align: center;
   padding-top: 25px;
   padding-bottom: 25px; */
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
   margin-bottom: 30px;
 }
 
@@ -458,7 +458,8 @@ img {
 .footer-social-item + .footer-social-item {
   margin-left: 10px;
 }
-.footer-social-link:hover {
+.footer-social-link:hover,
+.footer-social-link:focus {
   background-color: var(--color-hover);
 }
 .footer-svg {
@@ -535,7 +536,8 @@ img {
 .gallery-link {
   display: block;
 }
-.gallery-link:hover {
+.gallery-link:hover,
+.gallery-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
